// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch ACT theme matches the snapshot 1`] = `
<div>
  <span
    class="MuiSwitch-root MuiSwitch-sizeMedium css-1twhucs-MuiSwitch-root"
  >
    <span
      class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-9wiyti-MuiButtonBase-root-MuiSwitch-switchBase"
      color="primary"
    >
      <input
        checked=""
        class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
        type="checkbox"
      />
      <span
        class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
      />
    </span>
    <span
      class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
    />
  </span>
</div>
`;

exports[`Switch ACT_ET theme matches the snapshot 1`] = `
<div>
  <span
    class="MuiSwitch-root MuiSwitch-sizeMedium css-kgh0wo-MuiSwitch-root"
  >
    <span
      class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-zknrib-MuiButtonBase-root-MuiSwitch-switchBase"
    >
      <input
        checked=""
        class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
        type="checkbox"
      />
      <span
        class="MuiSwitch-thumb css-1uu3p77-MuiSwitch-thumb"
      />
    </span>
    <span
      class="MuiSwitch-track css-1w2d6go-MuiSwitch-track"
    />
  </span>
</div>
`;

exports[`Switch ENCOURA theme matches the snapshot 1`] = `
<div>
  <span
    class="MuiSwitch-root MuiSwitch-sizeMedium css-v1ntyu-MuiSwitch-root"
  >
    <span
      class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-f0gk3r-MuiButtonBase-root-MuiSwitch-switchBase"
    >
      <input
        checked=""
        class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
        type="checkbox"
      />
      <span
        class="MuiSwitch-thumb css-1uu3p77-MuiSwitch-thumb"
      />
    </span>
    <span
      class="MuiSwitch-track css-1w2d6go-MuiSwitch-track"
    />
  </span>
</div>
`;

exports[`Switch ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <span
    class="MuiSwitch-root MuiSwitch-sizeMedium css-kgh0wo-MuiSwitch-root"
  >
    <span
      class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-pkf8u0-MuiButtonBase-root-MuiSwitch-switchBase"
    >
      <input
        checked=""
        class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
        type="checkbox"
      />
      <span
        class="MuiSwitch-thumb css-1uu3p77-MuiSwitch-thumb"
      />
    </span>
    <span
      class="MuiSwitch-track css-1w2d6go-MuiSwitch-track"
    />
  </span>
</div>
`;

exports[`Switch ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <span
    class="MuiSwitch-root MuiSwitch-sizeMedium css-kgh0wo-MuiSwitch-root"
  >
    <span
      class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-1yxpnt5-MuiButtonBase-root-MuiSwitch-switchBase"
    >
      <input
        checked=""
        class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
        type="checkbox"
      />
      <span
        class="MuiSwitch-thumb css-vi2dvs-MuiSwitch-thumb"
      />
    </span>
    <span
      class="MuiSwitch-track css-1w2d6go-MuiSwitch-track"
    />
  </span>
</div>
`;

exports[`Switch ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <span
    class="MuiSwitch-root MuiSwitch-sizeMedium css-1dscvb8-MuiSwitch-root"
  >
    <span
      class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-1pyp4rk-MuiButtonBase-root-MuiSwitch-switchBase"
    >
      <input
        checked=""
        class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
        type="checkbox"
      />
      <span
        class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
      />
    </span>
    <span
      class="MuiSwitch-track css-19iqpv6-MuiSwitch-track"
    />
  </span>
</div>
`;
